use adp:icon and fix broken layout
- prefer adp:icon over old-style .gif images
- fix line-breaks in table headers of week-calender, which causes
  diffent heights of some of the table headers (1 line vs. 2lines)
  This was a problem at least with bootstrap5

--- a/www/resources/calendar.css
+++ b/www/resources/calendar.css
@@ -57,6 +57,11 @@
 	padding: 2px;
 }
 
+#cal-table-week th {
+    white-space:nowrap;
+    font-size:smaller;
+}
+
 /* END Month View  ---------------------------------------------------*/
 
 .cal-input-field {
